develop: add getAll service and fix messages and entities, add swagger file
