# src/config/routes/api-routes.js
@@ -8,28 +8,35 @@ const cryptoController = require("../../controllers/crypto-controller");
 const userMiddleware = require("../middleware/user-middleware");
 const cryptoMiddleware = require("../middleware/crypto-middleware");
 
-module.exports.routes = () => {
+const routes = () => {
   const router = express.Router();
   router.use("/doc", swaggerUi.serve);
   router.get("/doc", swaggerUi.setup(swaggerDocument));
   router.get("/values", valuesController.values);
-  router.post("/login", loginController.login);
+  router.post("/user/login", loginController.login);
   router.post(
     "/user/create",
     userMiddleware.validateInput,
     userController.create
   );
+  router.get("/crypto/list", cryptoController.get);
+
+  return router;
+};
+
+const authRoutes = () => {
+  const router = express.Router();
   router.post(
     "/create",
-    userMiddleware.validateJwt,
     cryptoMiddleware.validateInput,
     cryptoController.create
   );
   router.get(
-    "/all",
-    userMiddleware.validateJwt,
+    "/user/list",
     cryptoMiddleware.validateQuery,
-    cryptoController.get
+    cryptoController.getByUser
   );
   return router;
 };
+
+module.exports = { routes, authRoutes };
