# swagger.json
@@ -10,16 +10,15 @@
     }
   },
   "host": "localhost:5005",
-  "basePath": "/v1/crypto",
+  "basePath": "/api/v1",
   "schemes": ["http"],
   "consumes": ["application/json"],
   "produces": ["application/json"],
   "paths": {
     "/values": {
       "get": {
-        "description": "Check health API.",
+        "summary": "Probar la correcta conexión",
         "tags": ["Health"],
-        "operationId": "healt",
         "responses": {
           "200": {
             "description": "OK"
@@ -27,285 +26,199 @@
         }
       }
     },
-    "/recharge/validate/{cellphone}": {
-      "get": {
-        "description": "Validate cell phone number if exceed the limit recharges pack per day",
-        "tags": ["Recharge"],
-        "operationId": "validatecellphone",
+    "/user/login": {
+      "post": {
+        "tags": ["User"],
+        "summary": "Proceso de autenticación",
+        "consumes": ["application/json"],
         "parameters": [
           {
-            "in": "path",
-            "name": "cellphone",
-            "required": true,
-            "description": "cellphone Number",
-            "type": "number"
-          }
-        ],
-        "produces": ["application/json"],
-        "responses": {
-          "200": {
-            "description": "OK",
+            "in": "body",
+            "name": "user",
+            "description": "The user to create.",
             "schema": {
-              "$ref": "#/definitions/rechargevalidationResponse"
+              "$ref": "#/definitions/LoginRequest"
             }
           }
-        }
+        ],
+        "responses": {
+          "200": {
+            "description": "Retorna JWT Token",
+            "schema": {
+              "$ref": "#/definitions/TokenResponse"
+            }
+          }
+        },
+        "produces": ["application/json"]
       }
     },
-    "/recharge/validate/operator/{cellphone}": {
+    "/crypto/list": {
       "get": {
-        "description": "validates if a cell phone belongs to the successful mobile operator",
-        "tags": ["Recharge"],
-        "operationId": "validatecellphoneOperator",
-        "parameters": [
-          {
-            "in": "path",
-            "name": "cellphone",
-            "required": true,
-            "description": "cellphone Number",
-            "type": "number"
-          }
-        ],
-        "produces": ["application/json"],
+        "summary": "Retorna las criptomonedas disponibles (Datos proporcionados por coingecko)",
+        "consumes": ["application/json"],
+        "tags": ["Cryptocurrency"],
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "OK"
+          }
+        },
+        "produces": ["application/json"]
+      }
+    },
+    "/user/create": {
+      "post": {
+        "tags": ["User"],
+        "summary": "Permite la creación de un usuario en el sistema",
+        "consumes": ["application/json"],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "data",
+            "description": "The user to create.",
             "schema": {
-              "$ref": "#/definitions/rechargevalidationResponse"
+              "$ref": "#/definitions/UserRequest"
             }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Usuario creado correctamente"
           },
           "400": {
-            "description": "Bad Request",
-            "schema": {
-              "$ref": "#/definitions/badRequestcellPhoneOperatorResponse"
-            }
+            "description": "La información enviada es incorrecta"
           },
-          "500": {
-            "description": "Internal Error",
-            "schema": {
-              "$ref": "#/definitions/internalErrorResponse"
-            }
+          "409": {
+            "description": "El usuario ya existe"
           }
-        }
-      }
-    }
-  },
-  "definitions": {
-    "rechargevalidationResponse": {
-      "required": ["valid"],
-      "properties": {
-        "valid": {
-          "type": "boolean"
-        }
+        },
+        "produces": ["application/json"]
       }
     },
-    "rechargeRequest": {
-      "properties": {
-        "RechargeInfo": {
-          "properties": {
-            "TransactionId": {
-              "type": "string"
-            },
-            "IdAplicacion": {
-              "type": "string"
-            },
-            "Mobile": {
-              "type": "string"
-            },
-            "pluPaquete": {
-              "type": "string"
-            },
-            "costoPaquete": {
-              "type": "number"
-            }
-          },
-          "type": "object"
-        },
-        "BonoInfo": {
-          "properties": {
-            "EmailComprador": {
-              "type": "string"
-            },
-            "CelularComprador": {
-              "type": "string"
-            },
-            "DocumentoComprador": {
-              "type": "number"
-            },
-            "TipoDocComprador": {
-              "type": "number"
-            },
-            "NombreComprador": {
-              "type": "string"
-            },
-            "BarrioEnvio": {
-              "type": "string"
-            },
-            "MunicipioId": {
-              "type": "number"
-            },
-            "OTPMetodoEnvio": {
-              "type": "string"
-            },
-            "OTPCodigo": {
-              "type": "number"
-            },
-            "OTPFechaEnvio": {
-              "type": "string"
-            },
-            "OTPFechaUso": {
-              "type": "string"
-            },
-            "TotalPuntosRedimidos": {
-              "type": "number"
-            },
-            "CostoEnvio": {
-              "type": "number"
-            },
-            "Channel": {
-              "type": "string"
-            },
-            "ListaProductos": {
-              "type": "array",
-              "items": {
-                "type": "object",
-                "properties": {
-                  "ProductoId": {
-                    "type": "string"
-                  },
-                  "NombreProducto": {
-                    "type": "string"
-                  },
-                  "PartnerCode": {
-                    "type": "string"
-                  },
-                  "PartnerName": {
-                    "type": "string"
-                  },
-                  "LocationCode": {
-                    "type": "string"
-                  },
-                  "Cantidad": {
-                    "type": "number"
-                  },
-                  "ValorPuntos": {
-                    "type": "number"
-                  },
-                  "FechaVencimiento": {
-                    "type": "string"
-                  },
-                  "Imagen": {
-                    "type": "string"
-                  },
-                  "DescripcionProducto": {
-                    "type": "string"
-                  },
-                  "NombreEnResponsys": {
-                    "type": "string"
-                  },
-                  "TermCondiciones": {
-                    "type": "string"
-                  },
-                  "FechaExpTexto": {
-                    "type": "string"
-                  },
-                  "TipoVigencia": {
-                    "type": "number"
-                  },
-                  "TipoRedencion": {
-                    "type": "number"
-                  },
-                  "SoloEmpresas": {
-                    "type": "boolean"
-                  },
-                  "JsonInfoAdicionalValor": {
-                    "required": [
-                      "departamento",
-                      "municipio",
-                      "estaciondeservicio"
-                    ],
-                    "properties": {
-                      "departamento": {
-                        "type": "string"
-                      },
-                      "municipio": {
-                        "type": "string"
-                      },
-                      "estaciondeservicio": {
-                        "type": "string"
-                      }
-                    },
-                    "type": "object"
-                  }
+    "/crypto/create": {
+      "post": {
+        "tags": ["Cryptocurrency"],
+        "summary": "Permite la asociación de una criptomoneda a un usuario",
+        "consumes": ["application/json"],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "data",
+            "description": "Identificador de la criptomoneda",
+            "schema": {
+              "required": ["id"],
+              "properties": {
+                "id": {
+                  "type": "string"
                 }
               }
             }
           },
-          "type": "object"
+          {
+            "in": "header",
+            "name": "Authorization",
+            "description": "Token previamente otorgado por el sistema en el inicio de sesión",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Criptomoneda asociada al usuario correctamente"
+          },
+          "400": {
+            "description": "La información enviada es incorrecta"
+          },
+          "401": {
+            "description": "El usuario no está autorizado"
+          },
+          "409": {
+            "description": "La criptomoneda ya se encuentra asociada al usuario"
+          }
+        },
+        "produces": ["application/json"]
+      }
+    },
+    "/crypto/user/list": {
+      "get": {
+        "summary": "Retorna las criptomonedas asociadas a un usuario",
+        "consumes": ["application/json"],
+        "tags": ["Cryptocurrency"],
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "description": "Token previamente otorgado por el sistema en el inicio de sesión",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "order",
+            "description": "Ordena la criptomonedas (asc/desc) teniendo en cuenta la cotización de la moneda del usuario. Valor por defecto `desc`",
+            "required": false,
+            "type": "string",
+            "enum": ["asc", "desc"]
+          },
+          {
+            "in": "query",
+            "name": "top",
+            "description": "Obtiene la cantidad designada de criptomonedas. Valor mínimo `1` y máximo `25` Valor por defecto `25`",
+            "required": false,
+            "type": "number"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "La información enviada es incorrecta"
+          }
+        },
+        "produces": ["application/json"]
+      }
+    }
+  },
+  "definitions": {
+    "LoginRequest": {
+      "type": "object",
+      "required": ["userName", "password"],
+      "properties": {
+        "userName": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
         }
       }
     },
-    "successfulRechargeResponse": {
+    "TokenResponse": {
+      "type": "object",
       "properties": {
-        "estado": {
-          "type": "string",
-          "example": "000"
-        },
-        "descripcion": {
-          "type": "string",
-          "example": "Transacción Exitosa"
-        },
-        "codigoTransaccion": {
-          "type": "string",
-          "example": "18335505"
+        "token": {
+          "type": "string"
         }
       }
     },
-    "customErrorResponse": {
+    "UserRequest": {
+      "type": "object",
+      "required": ["name", "lastName", "userName", "password", "currency"],
       "properties": {
-        "resultCode": {
-          "type": "string",
-          "example": "BAD_REQUEST"
+        "name": {
+          "type": "string"
         },
-        "resultMsg": {
-          "type": "string",
-          "example": "Data required is not provided"
-        }
-      }
-    },
-    "badRequestResponse": {
-      "properties": {
-        "resultCode": {
-          "type": "string",
-          "example": "CELLPHONE_NOT_EXIST"
+        "lastName": {
+          "type": "string"
         },
-        "resultMsg": {
-          "type": "string",
-          "example": "Cellphone number don't exist for the operator"
-        }
-      }
-    },
-    "internalErrorResponse": {
-      "properties": {
-        "resultCode": {
-          "type": "string",
-          "example": "INTERNAL_ERROR"
+        "userName": {
+          "type": "string"
         },
-        "resultMsg": {
-          "type": "string",
-          "example": "Something went wrong. Try again please"
-        }
-      }
-    },
-    "badRequestcellPhoneOperatorResponse": {
-      "properties": {
-        "resultCode": {
-          "type": "string",
-          "example": "BAD_REQUEST"
+        "password": {
+          "type": "string"
         },
-        "resultMsg": {
+        "currency": {
           "type": "string",
-          "example": "Cellphone number is not provided"
+          "enum": ["ARS", "USD", "EUR"]
         }
       }
     }
